# ms-teams-chat-bot

./: .env.dist  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
src/bots/: auth_bot.py  dialog_bot.py
src/conversation/history/: conversation_history.py
src/conversation/roles/: role_classes.py
src/conversation/services/: conversation_service.py  key_manager.py
src/dialogs/: __init__.py  logout_dialog.py  main_dialog.py
src/helpers/: __init__.py  conversation_helper.py  dialog_helper.py
src/services/: __init__.py  auth.py  user.py
